# modelsig

./: .gitignore  README.md  WORKFLOW.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  weekly-validation.yml
modelsig/: __init__.py  analyze.py  constants.py
modelsig/comparison/: coverage.py  multifidelity.py  phases.py  quant_transfer.py  ratios.py
modelsig/hf/: client.py
modelsig/onnx/: collector.py  ops.py  parser.py  selector.py
modelsig/output/: colors.py  json_fmt.py  markdown_fmt.py  table_fmt.py
modelsig/parsers/: config.py  safetensors.py
modelsig/signature/: arch.py  fingerprint.py  quant.py  static.py  template.py
modelsig/torch/: fx_trace.py  hooks.py  layer_sig.py
results/: validation_run.json
tests/: test_comparison.py  test_onnx.py  test_parsers.py  test_signature.py  test_torch.py  validate_models.py
