[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelsig"
version = "2.0.0"
description = "Compare LLM architectures without downloading weights — structural fingerprint & proxy-test advisor"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "modelsig contributors" },
]
keywords = [
    "llm", "huggingface", "model-analysis", "safetensors", "onnx",
    "architecture", "fingerprint", "proxy-testing", "vllm", "inference",
    "qwen", "llama", "mistral", "moe", "gqa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.28.0",
    "huggingface_hub>=0.20.0",
    "onnx>=1.14.0",
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
modelsig = "modelsig.analyze:main"

[project.urls]
Homepage = "https://github.com/joe0731/modelsig"
Repository = "https://github.com/joe0731/modelsig"
"Bug Tracker" = "https://github.com/joe0731/modelsig/issues"

[tool.hatch.build.targets.wheel]
packages = ["modelsig"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov",
]

